phase7-ingress/example-http/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-nodeport
spec:
  selector:
    app: whoami
  ports:
    - port: 8901
      targetPort: 80
  type: NodePort
