phase7-ingress/example-http/ingress-routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`test.k8local.io`)
    kind: Rule
    services:
    - name: whoami
      port: 80
