phase7-ingress/example-http/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      app: net-tool
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
